# asset-management

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROMPTS.md  SETUP.md  WEB.md  docker-compose.yml  memctl.py  memory_client.py  memory_config.py  memory_queue.py  pyproject.toml
backend/: app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
